Changed homepage heading

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="text-center">
 <h1>Welcome to Sunnyside Day Care</h1>
 <p>We provide trusted childcare services with love and care.</p>
-    
+<p>"Welcome" to "Welcome to Sunnyside Day Care 🌞</p>    
 </div>
